--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "gulp-watch": "^5.0.1",
     "cssnano": "^4.1.10"
   },
+  "devDependencies": {
+    "gulp-js-import": "^1.0.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
