--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@babel/core": "^7.5.0",
     "babel-preset-es2015": "^6.24.1",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
+    "gulp-js-import-file": "^1.0.11",
     "gulp-minify-css": "^1.2.4",
     "gulp-postcss": "^8.0.0",
     "gulp-replace": "^1.0.0",
@@ -19,11 +21,10 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
-    "cssnano": "^4.1.10"
+    "i": "^0.3.6",
+    "npm": "^6.12.0"
   },
-  "devDependencies": {
-    "gulp-js-import": "^1.0.6"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
