--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@babel/core": "^7.5.0",
     "babel-preset-es2015": "^6.24.1",
+    "jquery": "^3.4.1",
+    "bootstrap": "^4.3.1",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
@@ -22,7 +24,8 @@
     "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
     "i": "^0.3.6",
-    "npm": "^6.12.0"
+    "npm": "^6.12.0",
+    "popper.js": "^1.16.0"
   },
   "devDependencies": {},
   "scripts": {
