--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Interaction Tools Maker",
   "main": "index.js",
   "dependencies": {
-    "@babel/core": "^7.5.0",
+    "@babel/core": "^7.7.2",
     "babel-preset-es2015": "^6.24.1",
-    "jquery": "^3.4.1",
     "bootstrap": "^4.3.1",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
@@ -24,10 +23,14 @@
     "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
     "i": "^0.3.6",
-    "npm": "^6.12.0",
+    "jquery": "^3.4.1",
+    "npm": "^6.13.0",
     "popper.js": "^1.16.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.7.0",
+    "gulp-js-import": "^1.0.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
