--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.7.2",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.3.1",
+    "bootstrap-colorpicker": "^3.1.2",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
